# DragonFly

./: .gitignore  CMakeLists.txt  conanfile.txt  run_example.bat
src/: CMakeLists.txt  Clock.cpp  Clock.h  Color.h  DisplayManager.cpp  DisplayManager.h  Event.cpp  Event.h  EventCollision.cpp  EventCollision.h  EventKeyboard.cpp  EventKeyboard.h  EventMouse.cpp  EventMouse.h  EventOut.cpp  EventOut.h  EventStep.cpp  EventStep.h  Frame.cpp  Frame.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  LogManager.cpp  LogManager.h  Manager.cpp  Manager.h  Music.cpp  Music.h  Object.cpp  Object.h  ObjectList.cpp  ObjectList.h  ObjectListIterator.cpp  ObjectListIterator.h  Player.h  RankManager.h  ResourceManager.cpp  ResourceManager.h  (+12 more)
tests/: CMakeLists.txt  MainAllTests.cpp  TestClock.cpp  TestEvent.cpp  TestEventStep.cpp  TestGameManager.cpp  TestLogManager.cpp  TestObject.cpp  TestObjectList.cpp  TestObjectListIterator.cpp  TestRankManager.cpp  TestSkill.cpp  TestVector.cpp  TestWorldManager.cpp
